# PacMapDotnet

./: .gitignore  .gitmodules  AnatomyTest.cs  BAD THINGS YOU DID.txt  CHANGELOG.md  COMPILATION_STATUS.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  FIX.md  FIX13.md  FIX14.md  FIX15.md  GAP.md  IMPLEMENTATION.md  Instructions.txt  LICENSE  PACMAP_MIGRATION_SUMMARY.md  PacMAN-Complete.sln  PacMapDotnetExample.cs  PacMapDotnetWrapper.cs  README.md  SeedTest.cs  SeedTest.csproj  SimpleSeedTest.cs  TestAnatomy.cs  TestDeterminism.cs  TestHnswSimple.cs  TestTransform.cs  ThreadSafeCallbackDemo.cs  ThreadSafeCallbackTest.cs  ThreadSafeCallbackTest.csproj  architecture.md  oldcode.txt  oldcode2.txt  oldcode3.txt  oldcode4.txt  readme_local.md  readme_remote.md  requirements.md  (+8 more)
pacmap-enhanced/: BUILD_INSTRUCTIONS.md  BuildDockerLinuxWindows.bat  Cargo.toml  Dockerfile.pacmap-builder  Dockerfile.test  build-pacmap-image.bat  build.rs  build_test.bat  convert_mnist.py  csharp_callback_example.cs  test-docker-check.bat  test_deterministic.rs  test_ffi_determinism.rs  test_integration_determinism.rs
pacmap-enhanced/examples/: mnist_test.rs  synthetic_data_test.rs  test_simple_transform.rs  test_transform_consistency.rs
pacmap-enhanced/src/: adam.rs  callback_queue.rs  distance.rs  error.rs  ffi.rs  gradient.rs  hnsw_index.rs  hnsw_params.rs  hnsw_wrapper.rs  knn.rs  lib.rs  neighbors.rs  pacman_core_mod.rs  pacmap_optimize.rs  pairs.rs  quantize.rs  recall_validation.rs  sampling.rs  serialization.rs  stats.rs  test_comprehensive_pipeline.rs  test_enhanced_wrapper.rs  test_error_fixes_simple.rs  test_ffi.rs  test_ffi_determinism.rs  test_ffi_reproducibility.rs  test_hnsw_params.rs  test_integration_determinism.rs  test_metric_validation.rs  test_model_persistence.rs  test_normalization.rs  test_progress_callback.rs  test_quantization_comprehensive.rs  test_real_functionality.rs  test_simple_reproducibility.rs  test_standard_comprehensive.rs  test_working_hnsw.rs
pacmap-enhanced/src/pacman-core/: adam.rs  distance.rs  gradient.rs  knn.rs  lib.rs  neighbors.rs  sampling.rs  weights.rs
pacmap-enhanced/src/pacman_core/: mod.rs
pacmap_pure_cpp/: CMakeLists.txt  EXTRACTION_REPORT.md  README.txt  build_instructions.md  pacmap_embedding_storage.cpp  pacmap_embedding_storage.h  test_comprehensive.cpp  test_simple.cpp
src/pacmap_pure_cpp/: BuildDockerLinuxWindows.bat  Buildwindows.bat  CMakeLists.txt  README.txt  build_instructions.md  build_minimal.bat  debug_hnsw_save_load.cpp  debug_transform_accuracy.cpp  enhanced_test.cpp  hnswalg.h  hnswlib.h  pacmap_crc32.cpp  pacmap_crc32.h  pacmap_distance.cpp  pacmap_distance.h  pacmap_fit.cpp  pacmap_fit.h  pacmap_gradient.cpp  pacmap_gradient.h  pacmap_hnsw_utils.cpp  pacmap_hnsw_utils.h  pacmap_model.cpp  pacmap_model.h  pacmap_optimization.cpp  pacmap_optimization.h  pacmap_persistence.cpp  pacmap_persistence.h  pacmap_progress_utils.cpp  pacmap_progress_utils.h  pacmap_quantization.cpp  pacmap_quantization.h  pacmap_simd_utils.h  pacmap_simple_minimal.cpp  pacmap_simple_wrapper.cpp  pacmap_simple_wrapper.h  pacmap_system_info.h  pacmap_transform.cpp  pacmap_transform.h  pacmap_triplet_sampling.cpp  pacmap_triplet_sampling.h  (+28 more)
src/pacmap_pure_cpp/build-linux/: CMakeCache.txt  Makefile  UMWWGBWrapperTargets.cmake  cmake_install.cmake  debug_quantization_simple  debug_save_load_test  debug_transform_accuracy  test_comprehensive_pipeline  test_ef_scaling_simple  test_ef_search_scaling  test_embedding_extraction_optimization  test_embedding_preservation  test_enhanced_wrapper  test_error_fixes_simple  test_quantization_comprehensive  test_standard_comprehensive  test_zero_norm_handling
src/pacmap_pure_cpp/build-windows/: CMakeCache.txt  UMWWGBWrapperTargets.cmake  cmake_install.cmake
src/pacmap_pure_cpp/build-windows/debug_quantization_simple.dir/Release/: debug_quantization_simple.exe.recipe
src/pacmap_pure_cpp/build-windows/debug_save_load_test.dir/Release/: debug_save_load_test.exe.recipe
src/pacmap_pure_cpp/build-windows/debug_transform_accuracy.dir/Release/: debug_transform_accuracy.exe.recipe
src/pacmap_pure_cpp/build-windows/pacmap.dir/Release/: pacmap.dll.recipe  version.res
src/pacmap_pure_cpp/build-windows/run_all_tests.dir/Release/: run_all_tests.exe.recipe
src/pacmap_pure_cpp/build-windows/test_basic_integration.dir/Release/: test_basic_integration.exe.recipe
src/pacmap_pure_cpp/build-windows/test_comprehensive_pipeline.dir/Release/: test_comprehensive_pipeline.exe.recipe
src/pacmap_pure_cpp/build-windows/test_direct_pacmap.dir/Release/: test_direct_pacmap.exe.recipe
src/pacmap_pure_cpp/build-windows/test_dll_export.dir/Release/: test_dll_export.exe.recipe
src/pacmap_pure_cpp/build-windows/test_ef_scaling_simple.dir/Release/: test_ef_scaling_simple.exe.recipe
src/pacmap_pure_cpp/build-windows/test_ef_search_scaling.dir/Release/: test_ef_search_scaling.exe.recipe
src/pacmap_pure_cpp/build-windows/test_embedding_extraction_optimization.dir/Release/: test_embedding_extraction_optimization.exe.recipe
src/pacmap_pure_cpp/build-windows/test_embedding_preservation.dir/Release/: test_embedding_preservation.exe.recipe
src/pacmap_pure_cpp/build-windows/test_enhanced_wrapper.dir/Release/: test_enhanced_wrapper.exe.recipe
src/pacmap_pure_cpp/build-windows/test_error_fixes_simple.dir/Release/: test_error_fixes_simple.exe.recipe
src/pacmap_pure_cpp/build-windows/test_mathematical_correctness.dir/Release/: test_mathematical_correctness.exe.recipe
src/pacmap_pure_cpp/build-windows/test_minimal_standalone.dir/Release/: test_minimal_standalone.exe.recipe
src/pacmap_pure_cpp/build-windows/test_quantization_comprehensive.dir/Release/: test_quantization_comprehensive.exe.recipe
src/pacmap_pure_cpp/build-windows/test_simple_minimal.dir/Release/: test_simple_minimal.exe.recipe
src/pacmap_pure_cpp/build_pacmap/: CMakeCache.txt  PACMAPWrapperTargets.cmake  cmake_install.cmake
src/pacmap_pure_cpp/test-build/: CMakeCache.txt  cmake_install.cmake
src/pacmap_pure_cpp/tmp_backup/unused_tests/: simple_save_load_test.cpp
(+90 files in other folders)
