[package]
name = "pacmap-enhanced"
version = "0.4.0"
edition = "2021"

[dependencies]
# Removed external pacmap dependency - now using deterministic pacman-core implementation
# True HNSW implementation for efficient neighbor search (optional) - newer deterministic version
hnsw = { version = "0.11", optional = true }
# Space crate for distance metrics used by HNSW
space = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
half = { version = "2.4", features = ["serde"] }
zstd = "0.13"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-npy = "0.9.1"
ordered-float = "3.9"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
crc32fast = "1.3"
bytemuck = "1.23.2"
# Additional dependencies for enhanced pacman-core implementation
thiserror = "1.0"
rayon = "1.8"
approx = "0.5"
lazy_static = "1.4"
# SIMD dependency for distance calculations (conditional)
wide = { version = "0.7", optional = true }

# Manual LAPACK setup using downloaded OpenBLAS binaries
[dependencies.blas]
version = "0.22"
default-features = false

[dependencies.lapack]
version = "0.19"
default-features = false

[features]
default = ["use_hnsw", "simd"]
use_hnsw = ["hnsw", "space"]
parallel = []
simd = ["wide"]
# Feature for using deterministic pacman-core (always enabled now)
deterministic_core = []

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
ndarray-rand = "0.15"
bincode = "1.3"
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "rlib"]