[package]
name = "pacmap-enhanced"
version = "0.4.0"
edition = "2021"

[dependencies]
pacmap = "0.2"
# True HNSW implementation for efficient neighbor search (optional)
hnsw_rs = { version = "0.2", optional = true }
# Alternative deterministic HNSW implementation with seed support
hnsw = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
half = { version = "2.4", features = ["serde"] }
zstd = "0.13"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-npy = "0.9.1"
ordered-float = "3.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
crc32fast = "1.3"
bytemuck = "1.23.2"

# Manual LAPACK setup using downloaded OpenBLAS binaries
[dependencies.blas]
version = "0.22"
default-features = false

[dependencies.lapack]
version = "0.19"
default-features = false

[features]
default = ["use_hnsw"]
use_hnsw = ["hnsw_rs"]
parallel = []

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
ndarray-rand = "0.15"
bincode = "1.3"

[lib]
crate-type = ["cdylib", "rlib"]
