[package]
name = "pacmap-enhanced"
version = "0.4.1"
edition = "2021"

[dependencies]
# Deterministic HNSW implementation with seed support
hnsw = { version = "0.11", features = ["serde"] }
space = "=0.17.0"  # Force exact version to match hnsw 0.11 requirements
rand_pcg = "0.3"
smallvec = { version = "1.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
half = { version = "2.4", features = ["serde"] }
zstd = "0.13"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
ndarray-npy = "0.9.1"
ordered-float = "3.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
crc32fast = "1.3"
num-traits = "0.2"
bytemuck = "1.23.2"
rayon = "1.10"
wide = "0.7"
thiserror = "2.0"
approx = "0.5"
crossbeam-queue = "0.3"
lazy_static = "1.4"

# Manual LAPACK setup using downloaded OpenBLAS binaries
[dependencies.blas]
version = "0.22"
default-features = false

[dependencies.lapack]
version = "0.19"
default-features = false

[features]
default = ["use_hnsw"]
use_hnsw = []
parallel = []

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
ndarray-rand = "0.15"
bincode = "1.3"

[lib]
crate-type = ["cdylib", "rlib"]
